# semabot2000

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
config/: default.toml
config/games/: steal_a_brainrot.toml
config/ontologies/: steal_a_brainrot.json
docs/: architecture.md  gpu-model-analysis.md  implementation-plan.md  initial-research.md  remote-training-guide.md
scripts/: autodistill_label.py  check.sh  train.py  vision_discover.py
spikes/behavior-tree/: bt_spike.py
spikes/directml-benchmark/: README.md  benchmark.py  requirements.txt
spikes/double-buffer/: double_buffer_spike.py
spikes/dxcam-roblox-capture/: capture_fallback_test.py  capture_test.py  requirements.txt
spikes/end-to-end/: e2e_test.py
spikes/input-simulation/: input_test.py
spikes/opencv-preprocess-benchmark/: benchmark.py
spikes/wgc-capture-benchmark/: capture_test.py  inspect_frame.py
spikes/yolo-roblox-detection/: detect_test.py
src/semabot/: __main__.py
src/semabot/action/: key_mapper.py  null_controller.py  (+1 more)
tests/: conftest.py
tests/integration/: test_detection_pipeline.py  test_full_pipeline.py
tests/unit/: test_auto_labeler.py  test_behavior_actions.py  test_behavior_conditions.py  test_behavior_engine.py  test_cli.py  test_config.py  test_constants.py  test_dataset.py  test_detector.py  test_factory.py  test_key_mapper.py  test_keyboard_controller.py  test_metrics.py  test_models.py  test_mss_source.py  test_orchestrator.py  test_placeholder.py  test_preprocessor.py  test_protocols.py  test_recorder.py  test_state_builder.py  test_wgc_source.py
(+21 files in other folders)
