[tool.poetry]
name = "semabot"
version = "0.1.0"
description = "AI-powered Roblox bot using computer vision, GPU-accelerated object detection, behavior trees, and keyboard input simulation."
authors = []
readme = "README.md"
packages = [{ include = "semabot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "*"
opencv-python = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"
pytest-cov = "*"
flake8 = "*"
flake8-cognitive-complexity = "*"

[tool.poetry.group.gpu.dependencies]
onnxruntime-directml = "*"
windows-capture = "*"
pydirectinput = "*"
py-trees = "*"
pywin32 = "*"
mss = "*"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
